--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,3 +1,6 @@
+.canv .flex-wrap {
+  flex-wrap: wrap; }
+
 .canv .app {
   position: relative;
   z-index: 4; }
@@ -5,6 +8,39 @@
     background-color: rgba(0, 0, 0, 0.5); }
     .canv .app header .modal.fade .modal-footer {
       justify-content: flex-start; }
+  .canv .app table {
+    width: 100%; }
+    .canv .app table td,
+    .canv .app table th {
+      vertical-align: middle; }
+  .canv .app form .select-day-of-week-item,
+  .canv .app form .link-meet {
+    flex-grow: 1;
+    justify-content: space-evenly;
+    display: flex; }
+    .canv .app form .select-day-of-week-item .form-select-cus,
+    .canv .app form .link-meet .form-select-cus {
+      padding: 0.375rem 2.25rem 0.375rem 0.75rem;
+      -moz-padding-start: calc(0.75rem - 3px);
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      flex-grow: 1;
+      margin-right: calc(var(--bs-gutter-x) * .3); }
+    .canv .app form .select-day-of-week-item .form-select-cus .input-group-text,
+    .canv .app form .link-meet .form-select-cus .input-group-text {
+      margin-right: calc(var(--bs-gutter-x) * 1.7); }
+  .canv .app form .select-day-of-week-item:nth-child(odd):not(:last-child) {
+    margin-right: calc(var(--bs-gutter-x) * .5); }
+  .canv .app form .link-meet {
+    flex-grow: 1; }
+  .canv .app form .input-group-text {
+    line-height: 140%;
+    font-size: 20px;
+    font-weight: 700;
+    margin-right: 10px; }
+  .canv .app form .message {
+    color: red; }
   .canv .app footer {
     background-color: #1c2331; }
     .canv .app footer .top-footer {
@@ -12,3 +48,11 @@
 
 .canv .modal-backdrop {
   display: none; }
+
+@media (max-width: 430px) {
+  .table {
+    font-size: 12px; } }
+
+@media (max-width: 350px) {
+  .table {
+    font-size: 10px; } }
