--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -51,21 +51,30 @@
       .canv .app .container table td,
       .canv .app .container table th {
         vertical-align: middle; }
-    .canv .app .container .pagination-down .paginationjs-pages ul {
+    .canv .app .container .pagination-down .paginationjs {
       display: flex;
-      justify-content: center; }
-      .canv .app .container .pagination-down .paginationjs-pages ul li {
-        list-style-type: none;
-        width: 40px;
-        height: 40px;
-        text-align: center;
-        line-height: 40px;
-        background-color: wheat;
-        font-size: 22px;
-        margin: 2px; }
-        .canv .app .container .pagination-down .paginationjs-pages ul li.active {
-          background-color: red;
-          color: white; }
+      justify-content: center;
+      text-align: center;
+      line-height: 40px; }
+      .canv .app .container .pagination-down .paginationjs > * {
+        margin: 5px; }
+      .canv .app .container .pagination-down .paginationjs .paginationjs-pages ul {
+        display: flex;
+        justify-content: center; }
+        .canv .app .container .pagination-down .paginationjs .paginationjs-pages ul li {
+          list-style-type: none;
+          width: 40px;
+          height: 40px;
+          background-color: wheat;
+          font-size: 22px;
+          margin: 2px; }
+          .canv .app .container .pagination-down .paginationjs .paginationjs-pages ul li.active {
+            background-color: red;
+            color: white; }
+      .canv .app .container .pagination-down .paginationjs .paginationjs-go-input input {
+        width: 50px; }
+      .canv .app .container .pagination-down .paginationjs .paginationjs-go-button input {
+        width: 50px; }
     .canv .app .container form .form-select-cus {
       padding: 0.375rem 2.25rem 0.375rem 0.75rem;
       -moz-padding-start: calc(0.75rem - 3px);
