--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -28,16 +28,10 @@
     .canv .app header .nav-item .loggout_btn,
     .canv .app header .nav-item .user_profile {
       cursor: pointer; }
-  .canv .app header .user_menu {
-    display: none; }
-  .canv .app header .user_menu.active {
-    display: block; }
-    .canv .app header .user_menu.active .user-menu-list {
-      min-width: 250px;
-      left: unset;
-      right: 0; }
-  .canv .app header .login_btn.active {
-    display: none; }
+  .canv .app header .user_menu .user-menu-list {
+    min-width: 250px;
+    left: unset;
+    right: 0; }
   .canv .app .container {
     padding: 20px 0; }
     .canv .app .container h2 {
