--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -8,6 +8,9 @@
     flex-wrap: wrap; }
   .canv .error {
     color: red; }
+  .canv .image-uploaded {
+    max-width: 100%;
+    height: 200px; }
   .canv .form-check {
     padding-left: 0; }
   .canv .lds-roller {
